Update for Egg, Inc 1.12.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 	<!-- Template -->
 	<script type="text/template" class="template">
-		<h1>Egg, Inc. Golden Eggs Costs Calculator</h1>
+		<h1>Egg, Inc. Golden Eggs Costs Calculator (<a href="archives/">v1.12</a>)</h1>
 		<div class="modal">
 			<h2>Current Statistics</h2>
 			<table id="stats-table">
@@ -275,7 +275,7 @@
 			</div>
 		</div>
 
-		<h3>Current as of Egg, Inc. version 1.10</h3>
+		<h3>Current as of Egg, Inc. version 1.12. <a href="archives/">Click here</a> for other versions.</h3>
 		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/bp7zms/epic_research_golden_eggs_costs_calculator/">Click here</a> for discussion, suggestions, and feedback!</h3>
 		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">It's on GitHub for some reason!</a></h3>
 	</script>
@@ -387,11 +387,11 @@
 			bonusVal: 0.1
 		},
 		epicMultiplier: {
-			costs: [10, 60, 110, 161, 211, 262, 312, 362, 413, 463, 514, 564, 614, 665, 715, 766, 816, 866, 917, 967, 1018, 1068, 1118, 1169, 1219, 1270, 1320, 1370, 1421, 1471, 1522, 1572, 1622, 1673, 1723, 1774, 1824, 1874, 1925, 1975, 2026, 2076, 2126, 2177, 2227, 2278, 2328, 2378, 2429, 2479, 2530, 2580, 2631, 2681, 2731, 2782, 2832, 2883, 2933, 2983, 3034, 3084, 3135, 3185, 3235, 3286, 3336, 3387, 3437, 3487, 3538, 3588, 3639, 3689, 3739, 3790, 3840, 3891, 3941, 3991, 4042, 4092, 4143, 4193, 4243, 4294, 4344, 4395, 4445, 4495, 4546, 4596, 4647, 4697, 4747, 4798, 4848, 4899, 4949, 5000],
+			costs: [10, 110, 211, 312, 413, 514, 615, 716, 817, 918, 1019, 1120, 1220, 1321, 1422, 1523, 1624, 1725, 1826, 1927, 2028, 2129, 2230, 2330, 2431, 2532, 2633, 2734, 2835, 2936, 3037, 3138, 3239, 3340, 3440, 3541, 3642, 3743, 3844, 3945, 4046, 4147, 4248, 4349, 4450, 4550, 4651, 4752, 4853, 4954, 5055, 5156, 5257, 5358, 5459, 5560, 5660, 5761, 5862, 5963, 6064, 6165, 6266, 6367, 6468, 6569, 6670, 6770, 6871, 6972, 7073, 7174, 7275, 7376, 7477, 7578, 7679, 7780, 7880, 7981, 8082, 8183, 8284, 8385, 8486, 8587, 8688, 8789, 8890, 8990, 9091, 9192, 9293, 9394, 9495, 9596, 9697, 9798, 9899, 10000],
 			title: "Epic Multiplier",
-			desc: "Increase max running chicken bonus by 1.0x!",
+			desc: "Increase max running chicken bonus by 2.0x!",
 			bonusDesc: "+{VAL}x MAX",
-			bonusVal: 1
+			bonusVal: 2
 		},
 		cheaperContractors: {
 			costs: [20, 240, 460, 680, 900, 1120, 1340, 1560, 1780, 2000],
@@ -478,7 +478,7 @@
 			bonusVal: 5
 		},
 		prophecyBonus: {
-			costs: [20000, 27500, 35000, 42500, 50000],
+			costs: [50000, 62500, 75000, 87500, 100000],
 			title: "Prophecy Bonus",
 			desc: "Increase bonus per egg of prophecy by +1% (compounding)",
 			bonusDesc: "+{VAL}%",
