--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 	<!-- Template -->
 	<script type="text/template" class="template">
-		<h1>Egg, Inc. Golden Eggs Costs Calculator (<a href="archives/">v1.12</a>)</h1>
+		<h1>Egg, Inc. Golden Eggs Costs Calculator (<a href="archives/">v1.20.1</a>)</h1>
 		<div class="modal">
 			<h2>Current Statistics</h2>
 			<table id="stats-table">
@@ -275,9 +275,9 @@
 			</div>
 		</div>
 
-		<h3>Current as of Egg, Inc. version 1.12. <a href="archives/">Click here</a> for other versions.</h3>
+		<h3>Current as of Egg, Inc. version 1.20.1. <a href="archives/">Click here</a> for other versions.</h3>
 		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/bp7zms/epic_research_golden_eggs_costs_calculator/">Click here</a> for discussion, suggestions, and feedback!</h3>
-		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">It's on GitHub for some reason!</a></h3>
+		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">Find the project on GitHub!</a></h3>
 	</script>
 
 
@@ -478,7 +478,7 @@
 			bonusVal: 5
 		},
 		prophecyBonus: {
-			costs: [50000, 62500, 75000, 87500, 100000],
+			costs: [100000, 325000, 550000, 775000, 1000000],
 			title: "Prophecy Bonus",
 			desc: "Increase bonus per egg of prophecy by +1% (compounding)",
 			bonusDesc: "+{VAL}%",
