Fix incorrect closing tags on totals row

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 					</tr>
 				<% }); %>
 				<tr class="bold-text">
-					<td class="noborder"></th>
-					<td class="noborder showdesc"></th>
-					<td class="noborder showbonus"></th>
-					<td id="total-levels"><%- totals.levels %></th>
-					<td id="total-spent" class="showspent"><%- totals.cost %></th>
-					<td id="total-remaining" class="showremaining"><%- totals.levels %></th>
-					<td class="showtotal"><%- totals.cost.toLocaleString() %></th>
+					<td class="noborder"></td>
+					<td class="noborder showdesc"></td>
+					<td class="noborder showbonus"></td>
+					<td id="total-levels"><%- totals.levels %></td>
+					<td id="total-spent" class="showspent"><%- totals.cost %></td>
+					<td id="total-remaining" class="showremaining"><%- totals.levels %></td>
+					<td class="showtotal"><%- totals.cost.toLocaleString() %></td>
 				</tr>
 			</table>
 			<label class="noselect"><input type="checkbox" checked="true" id="chkdesc" tabindex="40"> Show Description</label>
