Manual cache busting of css/js files for best results and compatibility

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Egg, Inc. Golden Egg Costs Calculator</title>
 
 	<script src="underscore-min.js"></script>
-	<script type="text/javascript" src="calc.js"></script>
-	<link rel="stylesheet" href="calc.css">
+	<script type="text/javascript" src="calc.20210626.js"></script>
+	<link rel="stylesheet" href="calc.20210626.css">
 </head>
 <body>
 	<div id="content"></div>
