Update and cache bust underscore.js library

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title>Egg, Inc. Golden Egg Costs Calculator</title>
 
-	<script src="underscore-min.js"></script>
+	<script src="underscore-min.20210626.js"></script>
 	<script type="text/javascript" src="calc.20210626.js"></script>
 	<link rel="stylesheet" href="calc.20210626.css">
 </head>
